--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,6 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+    <resource-ref>
+        <description>DB Connection Pool</description>
+        <res-ref-name>myDataSource</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
     <context-param>
         <param-name>databaseURL</param-name>
         <param-value>jdbc:mysql://localhost:3306/ebookshop?allowPublicKeyRetrieval=true&amp;useSSL=false&amp;serverTimezone=UTC</param-value>
@@ -15,7 +21,6 @@
         <param-name>password</param-name>
         <param-value>password</param-value>
     </context-param>
-    
     <servlet>
         <servlet-name>EntryServlet</servlet-name>
         <servlet-class>com.kirilo.java.eshop.servlets.EntryServlet</servlet-class>
